[gd_scene load_steps=5 format=3 uid="uid://ylmoqwimv31g"]

[ext_resource type="Script" path="res://src/UI/Debug/DebugInfo.gd" id="1"]
[ext_resource type="Theme" path="res://src/UI/Debug/Debug.tres" id="2"]
[ext_resource type="FontFile" uid="uid://dv7qsu1dso57y" path="res://src/UI/Font/MomoDigitMono.tres" id="3"]
[ext_resource type="FontFile" path="res://src/UI/Font/MomoNoSpacing.tres" id="4"]

[node name="DebugInfo" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="General" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBox/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2")
text = "Laputa"

[node name="FPS" type="Label" parent="VBox/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "FPS: "

[node name="Screen" type="Label" parent="VBox/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Screen:"

[node name="Arrays" type="HBoxContainer" parent="VBox/General"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="Guns" type="VBoxContainer" parent="VBox/General/Arrays"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBox/General/Arrays/Guns"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "GUNS"

[node name="Sfx" type="VBoxContainer" parent="VBox/General/Arrays"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBox/General/Arrays/Sfx"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "SFX"

[node name="Music" type="VBoxContainer" parent="VBox/General/Arrays"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBox/General/Arrays/Music"]
layout_mode = 2
text = "Music"

[node name="Inventory" type="VBoxContainer" parent="VBox/General/Arrays"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Topic" type="VBoxContainer" parent="VBox/General/Arrays"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
mouse_filter = 2

[node name="C1" type="HBoxContainer" parent="VBox/HBox"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="Q" type="VBoxContainer" parent="VBox/HBox/C1"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="Bars" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("4")
text = "BARS"

[node name="HP" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "HP: "

[node name="TotalXP" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Tot XP: "

[node name="WeaponXP" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Wp XP: "

[node name="WeaponCooldown" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "CD: "

[node name="Movement" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("4")
text = "MOVE"

[node name="Velocity" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Vel: "

[node name="Speed" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Speed: "

[node name="Gravity" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Grav: "

[node name="Pos" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Position: "

[node name="Animation" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Anim: "

[node name="State" type="Label" parent="VBox/HBox/C1/Q"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "State: "

[node name="Direction" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("4")
text = "DIR"

[node name="MoveDir" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Move: "

[node name="LookDir" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Look: "

[node name="LockDir" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Lock: "

[node name="ShootDir" type="Label" parent="VBox/HBox/C1/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Shoot: "

[node name="A" type="VBoxContainer" parent="VBox/HBox/C1"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="Bars" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3")

[node name="HP" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="TotalXP" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="WeaponXP" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="WeaponCooldown" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="Movement" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3")

[node name="Velocity" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="Speed" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="Gravity" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="Pos" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="Animation" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="State" type="Label" parent="VBox/HBox/C1/A"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="Direction" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3")

[node name="MoveDir" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="LookDir" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="LockDir" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="ShootDir" type="Label" parent="VBox/HBox/C1/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="C2" type="HBoxContainer" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("2")

[node name="Q" type="VBoxContainer" parent="VBox/HBox/C2"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="Cam" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("4")
text = "CAM"

[node name="CameraPos" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Pos: "

[node name="CameraOffset" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Offset: "

[node name="State" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("4")
text = "STATE"

[node name="Disabled" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Disabl: "

[node name="Invincible" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Invin: "

[node name="Inspect" type="Label" parent="VBox/HBox/C2/Q"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Inspec: "

[node name="Floor" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Floor: "

[node name="Crouch" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Crouch"

[node name="SSP" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "SSP: "

[node name="Water" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Water: "

[node name="Object" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("4")
text = "OBJ"

[node name="Front" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Front: "

[node name="Middle" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Middle: "

[node name="Back" type="Label" parent="VBox/HBox/C2/Q"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "Back: "

[node name="A" type="VBoxContainer" parent="VBox/HBox/C2"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2")

[node name="View" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3")

[node name="CameraPos" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="CameraOffset" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="State" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3")

[node name="Disabled" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="Invincible" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="Inspect" type="Label" parent="VBox/HBox/C2/A"]
visible = false
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="Floor" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="Crouch" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="SSP" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="Water" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("4")
text = "-"

[node name="Object" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3")

[node name="Front" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="Middle" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"

[node name="Back" type="Label" parent="VBox/HBox/C2/A"]
layout_mode = 2
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("3")
text = "-"
